# network-initializer

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  input.toml  package-lock.json  run.sh  tailwind.config.js
.github/workflows/: sync-ui.yaml
src/: drone_factory.rs  main.rs  network_initializer.rs
src/utils/: input_validator.rs
static/: index.html  output.css  script.js
static/client/frontend/: index.html
static/client/frontend/src/: App.svelte
static/client/frontend/src/lib/: Chat.svelte  ChatBox.svelte  ChatContainer.svelte  EmojiButton.svelte  ImageViewer.svelte  Message.svelte  ServerSelector.svelte  Toast.svelte
static/client/frontend/src/stores/: events.ts  store.ts  users.ts
static/client/frontend/src/types/: message.ts  websocket.ts
static/client/frontend/src/utils/: chat.ts  init.ts  ws.ts
static/client/frontend/src/utils/websocket/: main.ts  message_handling.ts
static/client/tonini/: index.html  input.css  output.css  script.js
static/server/emeliyanov/: asset-manifest.json  index.html
static/server/emeliyanov/static/css/: main.cdfed63b.css  main.cdfed63b.css.map  main.e0bf5a85.css  main.e0bf5a85.css.map
static/server/emeliyanov/static/js/: main.39f14a28.js  main.39f14a28.js.map  main.a51b27f9.js  main.a51b27f9.js.map  main.b244280c.js  main.b244280c.js.map  main.c5287138.js  main.c5287138.js.LICENSE.txt
static/server/frontend/: package-lock.json
static/server/frontend/src/: App.tsx
static/server/frontend/src/components/: BarChart.tsx  ExpandableSection.tsx  PieChart.tsx  Sidebar.tsx
static/server/frontend/src/screens/: Dashboard.tsx  Server.tsx
