[package]
name = "network-initializer"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
simulation-controller = { path = "../simulation-controller" }
server = { path = "../server/" }
drone = { path = "../drone/" }
common-utils = { path = "../common-utils/" }

crossbeam-channel = "0.5.13"
toml = "0.8.19"
env_logger = "0.11.6"
log = "0.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
