[package]
name = "network-initializer"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }

simulation-controller = { git = "https://github.com/Rustbusters/simulation-controller.git", branch = "dev/common" }
rustbusters-drone = { git = "https://github.com/Rustbusters/drone.git" }
client = { git = "https://github.com/Rustbusters/client.git" }
server = { git = "https://github.com/Rustbusters/server.git" }
common-utils = { git = "https://github.com/Rustbusters/common-utils.git" }

# simulation-controller = { path = "../simulation-controller" }
# rustbusters-drone = { path = "../drone" }
# client = { path = "../client" }
# server = { path = "../server" }
# common-utils = { path = "../common-utils" }

crossbeam-channel = "0.5.13"
toml = "0.8.19"
env_logger = "0.11.6"
log = "0.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
